[package]
name = "ccwd"
version = "0.1.0"
authors = ["mehrati <geekoffmail@gmail.com>"]
license = "MIT"
repository = "https://github.com/mehrati/ccwd"
description = "copy current working dirctory to clipboard"
keywords = ["xset", "xclip", "pwd","clipboard","linux",]
categories = ["cli tool"]
readme = "README.md"
documentation = ""
[dependencies]
